--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/sharedworker": "^0.0.96",
     "@types/three": "^0.150.2",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
